table wrapping might be fixed now

--- a/source/_static/theme_overrides.css
+++ b/source/_static/theme_overrides.css
@@ -1,3 +1,3 @@
-wy-table-responsive table td {
- white-space: normal;
+.wy-table-responsive table td {
+white-space: normal;
 }
